# sc-node

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  STATUS.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: README.md
crates/sc-agent-core/: Cargo.toml
crates/sc-agent-core/src/: lib.rs
crates/sc-audit/: Cargo.toml
crates/sc-audit/src/: lib.rs
crates/sc-config/: Cargo.toml
crates/sc-config/src/: lib.rs
crates/sc-contract/: Cargo.toml
crates/sc-contract/src/: lib.rs  preflight.rs
crates/sc-memory/: Cargo.toml
crates/sc-memory/src/: error.rs  fake_embedding.rs  lib.rs  rag.rs  reference.rs  traits.rs  turbovec_backend.rs  types.rs
crates/sc-message-types/: Cargo.toml
crates/sc-message-types/src/: lib.rs
crates/sc-proof/: Cargo.toml
crates/sc-proof/src/: lib.rs
crates/sc-provider-core/: Cargo.toml
crates/sc-provider-core/src/: lib.rs  openai_compat.rs  routing.rs  sse.rs
crates/sc-provider-nvidia/: Cargo.toml
crates/sc-provider-nvidia/src/: lib.rs
crates/sc-provider-ollama/: Cargo.toml
crates/sc-provider-ollama/src/: lib.rs
crates/sc-provider-openrouter/: Cargo.toml
crates/sc-provider-openrouter/src/: lib.rs
crates/sc-sandbox/: Cargo.toml
crates/sc-sandbox/src/: lib.rs
crates/sc-tool-core/: Cargo.toml
crates/sc-tool-core/src/: lib.rs
crates/sc-tool-file/: Cargo.toml
crates/sc-tool-file/src/: lib.rs
crates/sc-tool-shell/: Cargo.toml
crates/sc-tool-shell/src/: lib.rs
docs/: ALPHA_READINESS.md  ARCHITECTURE.md  BENCHMARKING.md  DEPENDENCY_INVENTORY.md  MEMORY_TURBOVEC_PLAN.md  MODEL_PROFILES_PLAN.md  OLLAMA_BACKEND_PLAN.md  PROVIDERS.md  ROADMAP.md  ROUTER_INTEGRATIONS_PLAN.md  SECURITY_MODEL.md  SECURITY_NOTES.md  STATUS.md
docs/archive/: ALPHA_READINESS.md  MEMORY_TURBOVEC_PLAN.md  MODEL_PROFILES_PLAN.md  OLLAMA_BACKEND_PLAN.md  README.md  ROUTER_INTEGRATIONS_PLAN.md
examples/: README.md  config.example.toml
examples/nvidia-nim/: README.md
examples/ollama/: README.md
examples/tool-agent/: README.md
scripts/: demo-agent-loop.ps1  smoke-check.ps1  verify-local.ps1  verify-public-beta.ps1
src/: main.rs
