[package]
name = "sc-agent"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SC-LABS-ai/sc-node"
homepage = "https://sclabs.uk"
description = "SC Node - Private, local-first AI agent runtime in Rust"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["ai", "agent", "llm", "cli", "rust"]

[workspace]
resolver = "2"
members = [
    "crates/sc-agent-core",
    "crates/sc-provider-core",
    "crates/sc-provider-openrouter",
    "crates/sc-provider-nvidia",
    "crates/sc-provider-ollama",
    "crates/sc-tool-core",
    "crates/sc-tool-file",
    "crates/sc-tool-shell",
    "crates/sc-config",
    "crates/sc-audit",
    "crates/sc-sandbox",
    "crates/sc-message-types",
    "crates/sc-contract",
    "crates/sc-proof",
    "crates/sc-memory",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SC-LABS-ai/sc-node"
homepage = "https://sclabs.uk"
description = "SC Node - Private, local-first AI agent runtime in Rust"
categories = ["command-line-utilities", "development-tools"]
keywords = ["ai", "agent", "llm", "cli", "rust"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std", "process", "signal", "sync", "time", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls-tls", "rustls-tls-native-roots", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "5"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
shell-escape = "0.1"
shellexpand = "2"
tempfile = "3"

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

sc-agent-core = { path = "crates/sc-agent-core" }
sc-config = { path = "crates/sc-config" }
sc-provider-core = { path = "crates/sc-provider-core" }
sc-provider-openrouter = { path = "crates/sc-provider-openrouter" }
sc-provider-nvidia = { path = "crates/sc-provider-nvidia" }
sc-provider-ollama = { path = "crates/sc-provider-ollama" }
sc-tool-core = { path = "crates/sc-tool-core" }
sc-tool-file = { path = "crates/sc-tool-file" }
sc-tool-shell = { path = "crates/sc-tool-shell" }
sc-audit = { path = "crates/sc-audit" }
sc-sandbox = { path = "crates/sc-sandbox" }
sc-message-types = { path = "crates/sc-message-types" }
sc-contract = { path = "crates/sc-contract" }
sc-proof = { path = "crates/sc-proof" }

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[profile.dev]
debug = 2