[package]
name = "sc-audit"
version = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
description = "Append-only audit logging for SC Node"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sc-message-types = { path = "../sc-message-types" }
sc-config = { path = "../sc-config" }
[dev-dependencies]
tempfile = { workspace = true }

