[package]
name = "sc-memory"
version = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
description = "Persistent local memory core (embeddings, storage, retrieval) for SC Node"
categories = { workspace = true }
keywords = { workspace = true }

[features]
default = []
# Optional TurboVec-accelerated ANN backend. OFF by default: the default
# build never links or calls into `turbovec`. See src/turbovec_backend.rs
# for the upstream-API verification note.
turbovec = ["dep:turbovec"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }

# Optional, feature-gated ANN backend. Pinned exact version: this crate's
# turbovec integration was written and verified against 0.9.0's actual
# source (vendored from crates.io); do not bump without re-reading the
# upstream API.
turbovec = { version = "=0.9.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
