[package]
name = "sc-provider-core"
version = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
description = "Core provider traits and OpenAI-compatible schema for SC Node"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros", "net", "io-util", "sync"] }
sc-message-types = { path = "../sc-message-types" }

