[package]
name = "sc-tool-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core tool traits and approval gates for SC Node"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

sc-message-types = { path = "../sc-message-types" }
sc-config = { path = "../sc-config" }
sc-sandbox = { path = "../sc-sandbox" }
